实现照片导入

--- a/SmartLibrary/Views/Pages/Bookshelf.xaml
+++ b/SmartLibrary/Views/Pages/Bookshelf.xaml
@@ -156,7 +156,7 @@
                                         HorizontalAlignment="Center"
                                         VerticalAlignment="Center"
                                         FontSize="12"
-                                        Foreground="{StaticResource TextFillColorSecondaryBrush}"
+                                        Foreground="{ui:ThemeResource TextFillColorSecondaryBrush}"
                                         Text="详细信息" />
                                 </Border>
                             </Grid>
