--- a/SmartLibrary/Views/Pages/Home.xaml
+++ b/SmartLibrary/Views/Pages/Home.xaml
@@ -46,7 +46,7 @@
                         FontSize="48"
                         FontTypography="TitleLarge"
                         Foreground="#FFFFFF"
-                        Text="智慧图书馆">
+                        Text="未来书海领航员">
                         <ui:TextBlock.Effect>
                             <DropShadowEffect
                                 BlurRadius="12"
